[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersuite"
dynamic = ["version"]
description = "A comprehensive Python-based cybersecurity toolkit"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Naman Goyal", email = "your.email@example.com"}
]
keywords = ["cybersecurity", "security", "penetration-testing", "hacking"]

[project.urls]
Homepage = "https://github.com/Codeguruu03/CyberSuite"
Documentation = "https://github.com/Codeguruu03/CyberSuite#readme"
Repository = "https://github.com/Codeguruu03/CyberSuite"
"Bug Tracker" = "https://github.com/Codeguruu03/CyberSuite/issues"

[tool.setuptools]
packages = ["cybersuite"]

[tool.setuptools.dynamic]
version = {attr = "cybersuite.__version__"}
